# spot2-ds-lead-opportunity-assessment

./: .gitignore  README-candidate.md  README.md  RELEASE_CHECKLIST.md  assessment.md  feature_dictionary.md  pyproject.toml  reviewer-rubric.md  synthetic-data-guide.md
config/: default.yaml  geo_reference_seed.yaml
scripts/: discover_clickhouse_shapes.py  generate_assessment_data.py  package_candidate_bundle.py  validate_generated_data.py  validators.py
src/spot2_assessment_data/: __init__.py  config.py  constants.py  distributions.py  geo_catalog.py  rng.py
src/spot2_assessment_data/generators/: __init__.py  _availability.py  _inquiries.py  _leads.py  _market_context.py  _outcomes.py  _spot_attributes.py  _spots.py
tests/: conftest.py  test_candidate_bundle.py  test_config.py  test_discovery.py  test_generators_outcomes.py  test_generators_structural.py  test_generators_tables.py  test_geo_catalog.py  test_outputs.py
